--- a/templates/useraccount/ekataunitsadmin.html
+++ b/templates/useraccount/ekataunitsadmin.html
@@ -75,7 +75,7 @@
                         <h4 class="widget-box-title">{% trans "Balance" %}</h4>
                         <hr class="widget-box-separator" style="width: 10%">
                         <div class="widget-box-text">
-                            <p>{{ balance }}</p>
+                            <p>{{ balance|floatformat:6 }}</p>
                         </div>
                     </div>
                     <div class="widget-box">
@@ -128,6 +128,21 @@
                     <div class="widget-box">
                         <div class="widget-box-text" id="distributeformcontainer">
                             {% include "useraccount/distributeform.html" %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box box-solid">
+                <div class="box-body">
+                    <div class="widget-box text-center">
+                        <h4 class="widget-box-title">{% trans "Calculate Distribution" %}</h4>
+                    </div>
+                    <div class="widget-box">
+                        <div class="widget-box-text">
+                            <input class="form-control" type="text" name="amount" value="" placeholder="Enter distribution amount" id="distamount" style="margin-bottom: 10px">
+                            <button type="button" class="btn btn-success btn-block" id="calculatebtn">
+                              {% trans "Calculate" %}
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -426,6 +441,18 @@
                         message: { text: 'Something went wrong!! Please try later' },
                         type: 'danger'
                     }).show();
+                }
+            });
+        });
+        $("#calculatebtn").on('click', function () {
+            var url = '{% url 'myaccount:get_total_amount' %}';
+            $.ajax({
+                url: url,
+                type: 'POST',
+                data: {'amount': $("#distamount").val()},
+                success: function(data){
+                    var blob=new Blob([data], {type: "text/plain;charset=utf-8"});
+                    saveAs(blob, "amounts_" + moment().format('MM-DD-YYYY_h_mm_ss_a') + ".txt");
                 }
             });
         });
