Reverted some GC distribution related functions

--- a/templates/sidebar_group.html
+++ b/templates/sidebar_group.html
@@ -102,7 +102,9 @@
     <ul class="treeview-menu">
         <li class="{% active request 'autosignup:signups' %}"><a href="{% url 'autosignup:signups' %}"><i class="fa fa-user-plus"></i>{% trans "Signups" %}</a></li>
         <li class="{% active request 'autosignup:signups_settings' %}"><a href="{% url 'autosignup:signups_settings' %}"><i class="fa fa-cog"></i>{% trans "Admin" %}</a></li>
-        <li class="{% active request 'myaccount:ekata_units_admin' %}"><a href="{% url 'myaccount:ekata_units_admin' %}"><i class="fa fa-plus-circle"></i>{% trans "Distribution" %}</a></li>
+        {% comment %}
+            <li class="{% active request 'myaccount:ekata_units_admin' %}"><a href="{% url 'myaccount:ekata_units_admin' %}"><i class="fa fa-plus-circle"></i>{% trans "Distribution" %}</a></li>
+        {% endcomment %}
     </ul>
 </li>
 {% endif %}
