--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -72,7 +72,7 @@
         <div class="col-md-4" id="timerwidget">
             <div class="box box-primary">
                 <div class="box-header with-border">
-                    <h3 class="box-title">{% trans "GRT Next Release" %}</h3>
+                    <h3 class="box-title">{% trans "Next Release" %}</h3>
                     <div class="box-tools pull-right">
                         <button class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse"><i class="fa fa-angle-up"></i></button>
                         <button class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
