--- a/templates/messagingsystem/chats.html
+++ b/templates/messagingsystem/chats.html
@@ -1,4 +1,4 @@
-{% load i18n staticfiles %}
+{% load i18n staticfiles bip_extras %}
     <div class="box-body" id="chatbody">
         <div class="direct-chat-messages">
             {% for message in messages %}
@@ -8,22 +8,26 @@
                         <span class="direct-chat-timestamp {% ifequal message.user request.user %}pull-left{% else %}pull-right{% endifequal %}">{{ message.timestamp|date:"H:i" }}</span>
                     </div>
                     <!-- /.direct-chat-info -->
-                    {% if message.user.profile.avatar %}
-                        {% ifequal message.user request.user  %}
+                    {% if message.user.profile.avatar_public %}
+                        {% if message.user.profile.avatar %}
                             <img src="{{ message.user.profile.avatar.thumbnail.128x128 }}" class="direct-chat-img">
                         {% else %}
-                            <a href="javascript:void(0)" class='actions'>
-                                <img src="{{ message.user.profile.avatar.thumbnail.128x128 }}" class="direct-chat-img">
-                            </a>
-                        {% endifequal %}
+                            <div class="default-avatar" style="background: {{ message.user.profile.default_avatar_color }}; width: 40px; height: 40px; {% ifequal message.user request.user %}float: right {% else %} float:left {% endifequal %}">
+                                <div class="default-avatar-text-wrapper">
+                                    <div class="default-avatar-text">
+                                        {% user_initial message.user %}
+                                    </div>
+                                </div>
+                            </div>
+                        {% endif %}
                     {% else %}
-                        {% ifequal message.user request.user  %}
-                            <img src="{% static "dist/img/placeholder-user.png" %}" class="direct-chat-img" width="50" height="50">
-                        {% else %}
-                            <a href="javascript:void(0)" class='actions'>
-                                <img src="{% static "dist/img/placeholder-user.png" %}" class="direct-chat-img" width="50" height="50">
-                            </a>
-                        {% endifequal %}
+                    <div class="default-avatar" style="background: {{ message.user.profile.default_avatar_color }}; width: 40px; height: 40px {% ifequal message.user request.user %}float: right {% else %} float:left {% endifequal %}">
+                        <div class="default-avatar-text-wrapper">
+                            <div class="default-avatar-text">
+                                {% user_initial message.user %}
+                            </div>
+                        </div>
+                    </div>
                     {% endif %}
                     <!-- /.direct-chat-img -->
                     {% if message.to_user == request.user %}
@@ -70,7 +74,7 @@
                             <h4 class="modal-title" id="sendUnitModalLabel">{% trans "Send Unit to: " %} {{ user.username }}</h4>
                         </div>
                         <div class="modal-body">
-                            {% include "useraccount/transferform.html" %}
+                            
                         </div>
                         <div class="modal-footer">
                             <button class="btn btn-primary" type="button" id="sendbutton">{% trans "Send" %}</button>
@@ -87,14 +91,14 @@
                             <h4 class="modal-title" id="requestUnitModalLabel">{% trans "Request Unit from: " %} {{ user.username }}</h4>
                         </div>
                         <div class="modal-body">
-                            {% include "useraccount/requestform.html" %}
+
                         </div>
                         <div class="modal-footer">
                             <button class="btn btn-primary" type="button" id="requestbutton">{% trans "Request" %}</button>
                         </div>
                     </div><!-- /.modal-content -->
                 </div><!-- /.modal-dialog -->
-            </div><!-- /.Request Unit Modal -->    
+            </div><!-- /.Request Unit Modal -->
         {% endwith %}
     {% endif %}
 {% endif %}
@@ -123,7 +127,7 @@
                                 $(".emojionearea-editor").text('');
                                 convertEmojis(true);
                             }
-                        }); 
+                        });
                     }
                 }
             },
@@ -136,9 +140,9 @@
         document.activeElement.blur();
     });
     var mouse_is_inside = false;
-    $(".emojionearea-picker, .emojionearea-button").hover(function(){ 
+    $(".emojionearea-picker, .emojionearea-button").hover(function(){
         mouse_is_inside=true;
-    }, function(){ 
+    }, function(){
         mouse_is_inside=false;
     });
     $(document).mouseup(function(){
@@ -163,12 +167,12 @@
                     $('.emojionearea-editor').text('');
                     convertEmojis(true);
                 }
-            }); 
+            });
         }
     });
     {% if modals %}
         $('.actions').popover({
-            html: true, 
+            html: true,
             content: function() {
                 return $("#actionslist").html();
             },
@@ -192,7 +196,7 @@
                 },
                 error: function(data) {
                     frm.html(data.responseText);
-                }   
+                }
             });
         });
         $("#sendUnitModal").on('hidden.bs.modal', function(){
