--- a/templates/publicusers/user.html
+++ b/templates/publicusers/user.html
@@ -1,4 +1,4 @@
-{% load staticfiles i18n %}
+{% load staticfiles i18n bip_extras %}
 <div class="col-md-4">
     <!-- Profile Image -->
     <div class="box box-primary">
@@ -9,14 +9,22 @@
                         <img src="{{ user.profile.avatar.thumbnail.128x128 }}" class="profile-user-img img-responsive img-circle" alt="User Image">
                     </a>
                 {% else %}
-                    <a href="#">
-                        <img src="{% static "dist/img/placeholder-user.png" %}" class="profile-user-img img-responsive img-circle" width="128" height="128">
-                    </a>
+                    <div class="default-avatar" style="background: {{ user.profile.default_avatar_color }}; width: 95px; height: 95px; left: 35%; margin-bottom: 10px">
+                        <div class="default-avatar-text-wrapper">
+                            <div class="default-avatar-text">
+                                {% user_initial user %}
+                            </div>
+                        </div>
+                    </div>
                 {% endif %}
             {% else %}
-                <a href="#">
-                    <img src="{% static "dist/img/placeholder-user.png" %}" class="profile-user-img img-responsive img-circle" width="128" height="128">
-                </a>
+            <div class="default-avatar" style="background: {{ user.profile.default_avatar_color }}; width: 95px; height: 95px; left: 35%; margin-bottom: 10px">
+                <div class="default-avatar-text-wrapper">
+                    <div class="default-avatar-text">
+                        {% user_initial user %}
+                    </div>
+                </div>
+            </div>
             {% endif %}
             <h3 class="profile-username text-center">{{ user.username }}</h3>
             <p class="text-muted text-center" id="userstatus" data-toggle="tooltip" title="{% trans "lastseen: " %}{{ user.profile.last_seen }}">
